# RaspberryFirmware

./: .gitignore  CMakeLists.txt  README.md
inc/: FreeRTOSConfig.h  air_quality.h  data_sender.h  noise.h  tcp_client.h  tempHumidity.h
lib/picoSensors/inc/: DHT22_Reader.h
lib/picoSensors/src/: DHT22_Reader.c
src/: air_quality.c  data_sender.c  main.c  noise.c  tcp_client.c  tempHumidity.c
